Fixed some bugs on iPhone

--- a/css/critical.css
+++ b/css/critical.css
@@ -55,7 +55,7 @@ body:not(.ja) [lang="ja"] {
     justify-content: center;
     align-items: center;
 
-    height: calc(max(720px, 60vh));
+    /* height: calc(max(720px, 60vh)); */
     overflow: hidden;
 
     background: linear-gradient(0deg, #1B2E70, #1B2E70),
@@ -144,8 +144,8 @@ body {
     cursor: pointer;
 
     margin: 1em;
-    width: calc(100% - 2em);
-
+    width: calc(100vw - 2em);
+    /*height: calc()*/
     aspect-ratio: 37 / 25;
 
     /* border: 1px solid violet; */
@@ -201,13 +201,29 @@ body {
 
 /* Smaller than 15cm is probably a phone! */
 @media (max-width: 20cm) {
-    .me {
-        max-height: 90%;
-        max-width: 90%;
+    .hero {
+        /* leave space for the credits!! */
+        min-height: calc(80vw + 144px + 120px);
+
+        flex-direction: column;
+        justify-content: flex-start;
     }
 
-    .hero {
-        flex-direction: column;
+    .me {
+        max-width: 80%;
+    }
+
+
+    .display-1 {
+        font-size: 3em;
+    }
+
+    .hero .leader {
+        flex-grow: 0;
+    }
+
+    .projects {
+        width: 100vw;
     }
     
 }
@@ -230,4 +246,8 @@ body {
     .project {
         width: calc(25% - 2em);
     }
+}
+
+.mobile-only {
+    display: none;
 }
