--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,9 +1,7 @@
 
 
 /* phones! */
-.projects {
-    width: 100vw;
-}
+
 
 figure {
     width: 100% !important;
@@ -13,4 +11,8 @@ figure {
     width: 100%;
     padding-left: 1em;
     padding-right: 1em;
+}
+
+.mobile-only {
+    display: unset;
 }
