--- a/css/style.css
+++ b/css/style.css
@@ -75,23 +75,6 @@ table td ul {
 }
 
 
-.project::after {
-    content: "";
-    position: absolute;
-    top: 0;
-
-    width: 100%;
-    height: 100%;
-}
-
-.project:hover::after {
-
-    /* left: 0; */
-    box-shadow: inset 0 0 15px #2b2b2b;
-
-
-}
-
 .project:hover img {
     transform:scale(150%);
 } 
@@ -105,11 +88,12 @@ table td ul {
     top: 0;
     bottom: 0;
     right: 0;
-    padding: 1em;
-
+    padding-left: 2em;
+    padding-right: 2em;
+    
     opacity: 0;
 
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .8);
     transition: .2s linear all;
 
     transform:scale(100%);
